# mangrobedb

./: .env  .gitignore  AGENTS.md  Cargo.toml  README.md  compose.yml  justfile  mangrobe_db.dev.yml
.agents/instructions/20260501-init/: development.md  impl-writer.md  mangrobe-api.proto  mangrobe-integration.md  reader.md  rough.md  todo.md  writer.md
.agents/instructions/20260510-ddl/: rough.md  todo.md
spec/0000-init/: development.md  mangrobe-api.proto  reader.md  rough.md  writer.md
src/: app_config.rs  application.rs  domain.rs  infrastructure.rs  main.rs  server.rs  util.rs
src/application/: datafusion.rs  error.rs  import.rs  ports.rs  query.rs
src/application/datafusion/: column.rs  file_pruning.rs  partition.rs  partition_extractor.rs  query.rs  sql.rs  table_provider.rs
src/application/datafusion/query/: create_external_table.rs  object_name.rs  util.rs
src/application/flusher/: service.rs
src/application/import/: error.rs  importing_records.rs  service.rs  validate.rs
src/application/query/: error.rs  external_table_definition.rs  service.rs
src/di/: container.rs
src/domain/: common_ports.rs  file_batch.rs  flush_unit.rs  flush_unit_record.rs  port.rs  repository.rs  statistics.rs  table.rs  table_mapping.rs  table_records.rs  table_schema.rs  time_range.rs  vortex_file_record.rs
src/domain/port/: catalog.rs  object_store.rs  uuid_generator.rs
src/infrastructure/: catalog.rs  object_store.rs  uuid.rs
src/infrastructure/catalog/: mangrobe.rs  mock.rs  persisted.rs
src/infrastructure/vortex/: writer.rs
src/server/: flight.rs  task.rs
src/server/flight/: error.rs  import.rs  mod.rs  query.rs  server.rs  sql_service.rs  statement_handler.rs  table_handler.rs
src/server/task/: flusher.rs
src/util/: db.rs  time.rs
src/util/arrow/: transform.rs
