[package]
name = "mangrobe-db"
version = "0.1.0"
edition = "2024"
default-run = "mangrobe-db"

[dependencies]
anyhow = "1"
arrow = { version = "58.1.0", features = ["prettyprint"] }
arrow-flight = "58.1.0"
chrono = { version = "0.4", default-features = false, features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tonic = { version = "0.14", features = ["transport"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
vortex = "0.70.0"
