[package]
name = "mangrobe-db"
version = "0.1.0"
edition = "2024"
default-run = "mangrobe-db"

[dependencies]
anyhow = "1"
arrow = { version = "58.1.0", features = ["prettyprint"] }
arrow-flight = "58.1.0"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
config = "0.15.2"
datafusion = "53.1.0"
datafusion-expr = "53.1.0"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tonic = { version = "0.14", features = ["transport"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
vortex = "0.70.0"
vortex-datafusion = "0.70.0"
object_store = { version = "0.13.2", features = ["aws"] }
async-fs = "2.2.0"
mangrobe-api-server = {path = "../mangrobe/mangrobe-api-server"}
sea-orm = "1.1.20"
prost-types = "0.14.3"
sea-orm-migration = "1.1.20"

[dev-dependencies]
rstest = "0.26"
